# obot

./: .env_template  README.md
v1/: README.md  app.py  pyproject.toml
v1/dev/: chat_history.txt  dev.py
v1/src/: chat_history.txt  gpt_interaction.py  gradio_interface.py  main.py  utils.py
v2/: README.md  chat_history.txt  dev.py  pyproject.toml
v2/dev/: dev.py
v2/src/: chat_history.txt  crew_setup.py  gradio_interface.py  main.py  utils.py
