[tool.poetry]
name = "v2"
version = "0.1.0"
description = ""
authors = ["lemberck <blemberck@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = "^0.41.1"
loguru = "^0.7.2"
gradio = "^4.38.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
